--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -4,4 +4,9 @@
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
+    &_left {
+        color: #ffffff;
+        text-align: left;
+        font-size: 36px;
+        }
 }
