--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,3 +11,6 @@
 @import 'blocks/buttons';
 @import 'blocks/advantages';
 @import 'blocks/titles';
+@import 'blocks/media';
+@import 'blocks/consultation';
+@import 'blocks/forms';
